add more constraints

--- a/pfe-backend/src/main/resources/application.properties
+++ b/pfe-backend/src/main/resources/application.properties
@@ -1,16 +1,18 @@
-# Configuration de la source de donnÈes MySQL
-spring.datasource.url=jdbc:mysql://localhost:3307/emploisTemps
+# Configuration de la source de donn√©es MySQL
+spring.datasource.url=jdbc:mysql://localhost:3306/emploisTemps?createDatabaseIfNotExist=true&useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
 spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # Configuration de JPA et Hibernate
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+
+# Initialisation de la base de donn√©es
 
 # Port du serveur
 server.port=8089
 
-# DÈsactivation de la console H2
+# D√©sactivation de la console H2
 spring.h2.console.enabled=false
